minor overflow fix

--- a/css/map.css
+++ b/css/map.css
@@ -71,6 +71,8 @@
 
 html {
   scroll-behavior: smooth;
+
+  overflow: hidden;
 }
 
 body {
